--- a/src/boundEmail.html
+++ b/src/boundEmail.html
@@ -34,7 +34,16 @@
 						<div class="title">绑定邮箱</div>
 					</div>
 					<div class="binding-email">
-						<div class="form-wrap">
+						<!-- 已绑定邮箱 -->
+						<div class="bind-after">
+							<div class="p-info">你已成功绑定了邮箱：1134****14@qq.com</div>
+							<div class="p-tip">您若需要修改邮箱，可以点击下面的按钮</div>
+							<button class="primary"><a href="modifyEmail.html">修改邮箱</a></button>
+						</div>
+						<!-- 已绑定邮箱 END -->
+
+						<!-- 未绑定邮箱 END -->
+						<!-- <div class="form-wrap">
 							<div class="item">
 								<label for="tel">邮箱:</label>
 								<input id="tel" type="text" placeholder="请输入您的邮箱">
@@ -47,7 +56,8 @@
 							<button id="submit" class="primary">确认</button>
 						</div>
 						<div class="tip">邮箱是你账户信息的重要认证。</div>
-						<div class="sub-tip">忘记密码时，您可以通过绑定的邮箱验证找回密码。</div>
+						<div class="sub-tip">忘记密码时，您可以通过绑定的邮箱验证找回密码。</div> -->
+						<!-- 未绑定邮箱 END -->
 					</div>
 				</div>
 			</section>
