--- a/src/userCenter.html
+++ b/src/userCenter.html
@@ -73,22 +73,25 @@
 						<div class="column">
 							<div class="tip">
 								<span class="hd">手机号码</span>
-								<span class="status">未绑定</span>
+								<span class="status"><i class="status-icon"></i> 未绑定</span>
 							</div>
 							<div class="sub-tip">忘记密码时，您可以通过绑定的手机短信找回密码</div>
 						</div>
 						<button><a href="boundPhone.html">绑定手机</a></button>
 					</div>
-					<div class="item">
+					<div class="item bind-after">
 						<i class="icon b-email"></i>
 						<div class="column">
 							<div class="tip">
 								<span class="hd">密保邮箱</span>
-								<span class="status">未绑定</span>
+								<span class="status">
+									<i class="status-icon"></i> 已绑定
+									<span class="info">324****111@qq.com</span>
+								</span>
 							</div>
 							<div class="sub-tip">忘记密码时，您可以通过绑定的邮箱找回密码</div>
 						</div>
-						<button><a href="boundEmail.html">绑定邮箱</a></button>
+						<button><a href="boundEmail.html">修改邮箱</a></button>
 					</div>
 				</div>
 			</div>
