--- a/src/boundPhone.html
+++ b/src/boundPhone.html
@@ -34,6 +34,15 @@
 						<div class="title">绑定手机</div>
 					</div>
 					<div class="binding-phone">
+
+						<!-- 已绑定手机 -->
+						<!-- <div class="bind-after">
+							<div class="p-info">你已成功绑定了手机：137****9021</div>
+							<div class="p-tip">您若需要修改手机号，可以点击下面的按钮</div>
+							<button class="primary"><a href="modifyPhone.html">修改手机号</a></button>
+						</div> -->
+						<!-- 已绑定 END -->
+
 						<div class="form-wrap">
 							<div class="item">
 								<label for="tel">手机号:</label>
