--- a/src/userBill.html
+++ b/src/userBill.html
@@ -28,19 +28,19 @@
 		<section class="main">
 			<div class="record-sidebar">
 				<ul>
-					<li class="item active">
+					<li id="nowDay" class="item active">
 						<span>今天</span>
 					</li>
-					<li class="item">
+					<li id="nowWeek" class="item">
 						<span>本周</span>
 					</li>
-					<li class="item">
+					<li id="lastWeek" class="item">
 						<span>上周</span>
 					</li>
-					<li class="item">
+					<li id="lastMonth" class="item">
 						<span>上月</span>
 					</li>
-					<li class="item">
+					<li id="nowMonth" class="item">
 						<span>本月</span>
 					</li>
 				</ul>
@@ -108,12 +108,62 @@
 
 	<script type="text/javascript">
 		var curTitle = '财务账单'
-		$('#startTime').fdatepicker({
-			format: 'yyyy-mm-dd'
-		});
-		$('#endTime').fdatepicker({
-			format: 'yyyy-mm-dd'
-		});
+		// 时间选择器初始化
+		function DatepickerInit() {
+			var initDate = getDate('nowDay');
+
+			$('#startTime').fdatepicker({
+				format: 'yyyy-mm-dd',
+				initialDate: initDate
+			});
+			$('#endTime').fdatepicker({
+				format: 'yyyy-mm-dd',
+				initialDate: initDate
+			});
+		}
+
+		// 记录侧边栏选择时间切换
+		function timeSiderBarToggle() {
+			var startTimeInput = $("#startTime");
+			var endTimeInput = $("#endTime");
+			var nowDay = getDate('nowDay');
+			var nowWeekStartTime = getDate('weekStartDate');
+			var nowWeekEndTime = getDate('weekEndDate');
+			var lastWeekStartTime = getDate('lastWeekStartDate');
+			var lastWeekEndTime = getDate('lastWeekEndDate');
+			var lastMonthStartTime = getDate('lastMonthStartDate');
+			var lastMonthEndTime = getDate('lastMonthEndDate');
+			var nowMonthStartTime = getDate('nowMonthStartDate');
+			var nowMonthEndDate =  getDate('nowMonthEndDate');
+
+			$(".record-sidebar .item").click(function(){
+				$(this).addClass('active').siblings().removeClass('active');		
+			})
+			$("#nowDay").click(function() {
+				startTimeInput.val(nowDay);
+				endTimeInput.val(nowDay);
+			})
+			$("#nowWeek").click(function() {
+				startTimeInput.val(nowWeekStartTime);
+				endTimeInput.val(nowWeekEndTime);
+			})
+			$("#lastWeek").click(function() {
+				startTimeInput.val(lastWeekStartTime);
+				endTimeInput.val(lastWeekEndTime);
+			})
+			$("#lastMonth").click(function() {
+				startTimeInput.val(lastMonthStartTime);
+				endTimeInput.val(lastMonthEndTime);
+			})
+			$("#nowMonth").click(function() {
+				startTimeInput.val(nowMonthStartTime);
+				endTimeInput.val(nowMonthEndDate);
+			})
+		}
+		$(function () {
+			DatepickerInit();
+			timeSiderBarToggle();
+		})
 	</script>
 </body>
 
